--- a/index.html
+++ b/index.html
@@ -319,15 +319,15 @@
 
             <p class="label-2 section-subtitle" id="about-label">Our Story</p>
 
-            <h2 class="headline-1 section-title" style="color: #fff;">Every Fla vor Tells a Story</h2>
+            <h2 class="headline-1 section-title" style="color: #ffff;">Every Fla vor Tells a Story</h2>
 
-            <p class="section-text" style="color: #fff;">
+            <p class="section-text" style="color: #ffff;">
               Lorem Ipsum is simply dummy text of the printingand typesetting industry lorem Ipsum has been the
               industrys standard dummy text ever since the when an unknown printer took a galley of type and scrambled
               it to make a type specimen book It has survived not only five centuries, but also the leap into.
             </p>
 
-            <div class="contact-label" style="color: #fff;">Enquiry Through Call</div>
+            <div class="contact-label" style="color: #ffff;">Enquiry Through Call</div>
 
             <a href="tel:+804001234567" class="body-1 contact-number hover-underline">+91 8318017121</a>
 
